--- a/succesful.html
+++ b/succesful.html
@@ -82,7 +82,7 @@
 </style>
 
 <body>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="parent">
         <div class="top">
         <div class="a1">
